--- a/_objects.block.scss
+++ b/_objects.block.scss
@@ -3,8 +3,7 @@
 \*------------------------------------*/
 
 /**
- * The block object simply causes any number of elements block up horizontally to
- * automatically fill an equal, fluid width of their parent.
+ * The block object simply stacks an image on top of some text-like content.
  */
 
 // Predefine the variables below in order to alter and enable specific features.
