Trailing semicolon to terminate declaration.

--- a/_objects.block.scss
+++ b/_objects.block.scss
@@ -79,7 +79,7 @@ $inuit-enable-block--right:     false !default;
 
             .#{$inuit-block-namespace}block--small > &,
             %#{$inuit-block-namespace}block--small > & {
-                margin-bottom: $inuit-block-gutter--small
+                margin-bottom: $inuit-block-gutter--small;
             }
 
         }
